infrastructure/base/monitoring/monitoring.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-system
  labels:
    networking.tinyrack.net/isolation: enabled
