infrastructure/base/monitoring/monitoring.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-monitoring
  namespace: monitoring-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    - fromEntities:
        - kube-apiserver
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 169.254.0.0/16
            - 172.16.0.0/12
            - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-monitoring-scraping
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            app.kubernetes.io/part-of: flux
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cert-manager-system
            app.kubernetes.io/instance: cert-manager
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "9963"
              protocol: TCP
